Image grid spacing fixes #65

--- a/assets/css/scss/uber-media.scss
+++ b/assets/css/scss/uber-media.scss
@@ -138,6 +138,7 @@ ul#uberimages {
 		position: relative;
 		margin: 8px 8px 8px;
 		line-height: 0;
+	  	max-width: 120px;
 		img {
 			cursor: pointer;
 			max-width: 120px;
